compiler/test-data/parser/control/errors/when_missing_condition.frel
module control.errors.when_missing_condition

blueprint Bad {
    when {
        text { "hello" }
    }
}
